--- a/posts/2025-06-03.md
+++ b/posts/2025-06-03.md
@@ -74,13 +74,13 @@ Much of this derives from prior work on the [datafrog](https://crates.io/crates/
 
 My plan is to go top-down, starting with "what is Datalog", and building the framework for an interactive evaluator.
 
-0. introducing datalog.
+0. [Introducing Datalog](#introducing-datalog)
 
 Once we have overview in place, we'll start to build up what are currently the three loci of functionality.
 
-1. Parsing Datalog
-2. Representing and maintaining sets of facts
-3. Planning and evaluating Datalog rules.
+1. [Parsing Datalog](#how-to-parse-rules-from-text)
+2. [Representing and maintaining sets of facts](#how-to-represent-sets-of-facts)
+3. [Planning and evaluating Datalog rules](#how-to-apply-rules-to-facts)
 
 There are some very natural next steps.
 I haven't done these yet, but I'm certain they can be done without a great deal of effort.
@@ -1006,12 +1006,8 @@ We are now done with the code tour.
 
 ### Experimentation
 
-This is coming up next! 
-Rest assured I've done some of this, but doing a decent job requires a bit of care and checking of results to make sure they are accurate.
-Going fast is easy if you don't check the results!
-
 I have some data from the [Graspan](http://web.cs.ucla.edu/~harryxu/papers/wang-asplos17.pdf) project, acquired at the time but [still available on Google Drive](https://drive.google.com/drive/folders/1DRj-cfISV9v34vU7DH1PKEu13PaMIf71).
-If you want to follow along, you can load the `httpd` dataflow analysis in as facts, using this fragment at the top of the `main.rs` file.
+If you want to follow along, put this fragment at the top of the `main.rs` file.
 ```rust
 for arg in std::env::args().skip(1) {
 
@@ -1043,36 +1039,513 @@ for arg in std::env::args().skip(1) {
 state.update();
 ```
 
-With that in hand, you can start things up (loading the data takes a moment), and type things like:
+There are a few different inputs and different program analyses to look at.
+We'll break them down by analyses (dataflow and points-to) and go from there.
 
+#### Nullability analysis
+
+I'm starting things up this way, with the `httpd` dataflow input and the `.list` command once we are in the shell to see what we are looking at.
 ```
-> .list
-    e:	9905624
-    n:	138331
-30.708µs
-
-> m(?b, ?a) :- n(?a, ?b) .
-52.027834ms
+mcsherry@gallustrate datatoad % cargo run --release -- ~/Projects/datasets/graspan-dataflow/httpd_df
+    Finished `release` profile [optimized] target(s) in 0.00s
+     Running `target/release/datatoad /Users/mcsherry/Projects/datasets/graspan-dataflow/httpd_df`
 
 > .list
-    e:	9905624
-    m:	138331
-    n:	138331
-45.916µs
+        e:      9905624
+        n:      138331
+39.458µs
 
-> m(?c, ?a) :- m(?b, ?a), e(?b, ?c) .
-8.360353834s
+> 
+```
+Two relations, `e` and `n`, corresponding to "edges" and "nodes" respectively.
+The same will be true for the `psql` and `linux` inputs as well, for the dataflow analysis.
+
+What is this dataflow analysis?
+*   The `n(?a, ?b)` relation describes the potential write of some value `?a` to a location `?b`.
+*   The `e(?a, ?b)` relation describes the movement of the value at one location `?a` to another location `?b`, as through assignment in a program.
+
+We're doing a "reachability" query to see which values written to some location can end up at any other through a path of edges.
+We can write this in Datalog as:
+```
+n(?a, ?c) :- n(?a, ?b), e(?b, ?c) .
+```
+In words, "if value `?a` may be written to `?b`, and `?b` may be copied to `?c`, then the value `?a` may be written to `?c`".
+
+Let's key this rule in to the shell and see what happens!
+
+---
+
+**Narrator**: What happened was an error.
+Always test your code, kids.
+
+---
+
+With the error fixed, and pushed to the repo, the result is
+```
+> n(?a, ?c) :- n(?a, ?b), e(?b, ?c) .
+15.494418333s
 
 > .list
-    e:	9905624
-    m:	9393283
-    n:	138331
-49.042µs
+        .temp-0-0-in:   9393283
+        e:      9905624
+        n:      9393283
+45.375µs
 
 > 
 ```
 
-This maths out to ~900ns per derived fact, and at 8.3s it's about 80x faster than Graspan.
-It is about 4x *slower* than datafrog, which seems to be largely because the variable shape of our facts makes sorting and deduplication harder.
+We took about 15s here, which .. is a number.
+It's quite a lot faster than what Graspan reports for the same problem (684s).
+But it's not the end of the story.
 
-More in a bit!
+There's also this `.temp-0-0-in` up there, which isn't clearly anything we care about.
+And it has .. roughly as many recorsd as `n`, and that number isn't small.
+What's going on?
+
+When we look at the join, we want to order the columns of `n` first by `?b` and then by `?a`, so that they can be joined with `e(?b, ?c)`, which already has `?b` up front.
+As such, we need to make an intermediate collection that just re-orders `n`, re-sorts it, it won't need to re-dedup it but we'll do that as well.
+So `.temp-0-0-in` is there only because we need to reshape `n` to make it work for the join.
+
+We could try and load the data in differently, or sort `n` by its second coordinate, or something else complicated, but let's not.
+A simpler thing we can do, by virtual of `n` being small initially, is to reshape it once and develop the reshaped variable instead.
+Here's what that looks like:
+```
+m(?b, ?a) :- n(?a, ?b) .
+m(?c, ?a) :- m(?b, ?a), e(?b, ?c) .
+```
+Pretty easy, with a bit of care taken to wiggle the variables around correctly.
+In fact, screw this let's use proper names to make this clearer.
+```
+m(?loc, ?val) :- n(?val, ?loc) .
+m(?loc, ?val) :- m(?mid, ?val), e(?mid, ?loc) .
+```
+I'd love to give `e`, `n`, and `m` better names, but for the moment that would involve copying the whole of the data around.
+Could do, but it's not the performance no-op that using better variable bindings is.
+For now.
+
+Let's see what happens now.
+```
+> m(?loc, ?val) :- n(?val, ?loc) .
+58.964458ms
+
+> m(?loc, ?val) :- m(?mid, ?val), e(?mid, ?loc) .
+8.434536333s
+
+> .list
+        .temp-0-0-in:   138331
+        e:      9905624
+        m:      9393283
+        n:      138331
+23.959µs
+
+> 
+```
+This is now substantially faster, but it does still have a `.temp-0-0-in` in there.
+This is my bad.
+It corresponds to the first rule, remapping `n` to `m`.
+There is no reason to have a non-identity map there, and I'll just need to tighten the logic for that (relatively untested) special case.
+
+The good news is that we don't have a `.temp` relation for the join.
+Both `e` and `m` are laid out the way the join wants them laid out, and we don't have to make or maintain copies of the data.
+Other than that glitch in the copying.
+But we can ignore the glitch for now.
+
+---
+
+**Narrator**: He could not ignore the glitch.
+
+---
+
+The glitch went unnoticed because even for single body atoms, we create a plan that orders the columns alphabetically, because it uses a `BTreeSet` to hold the names.
+When we switched from `?a` and `?b` to instead use `?val` and `?loc`, for narrative reasons, that order changed.
+It reveals a larger glitch, spanning joins as well, that body atoms have the *set* of their key columns dictated at them, but they can choose the *order* of these columns, and prefer their natural order if there is one that is compatible.
+
+We'll fix this, but not right now.
+
+What we've learned here is that there is a bit of query planning and optimization that is up to the user.
+The initial shape of the data determines how efficient the plan can be, in a way that is tricky to fix without deferring computation until we see the ways the data will be used.
+That's not the intent of our current Datalog interpreter, which eagerly performs work, but it's a reasonable thing to think about supporting.
+
+At this point we can load up other datasets and hit them with the same analysis.
+There is a `psql` dataset and several `linux` datasets.
+My understanding of the `linux` datasets is that they are meant to be analyzed in isolation: they all use identifiers starting at `0` and going up, but they don't correspond to the same code locations across files.
+The largest by far is `lnx_kernel_df`, and I'll just use that one.
+
+I put the results together, reporting the time to perform the rule evaluation.
+The time to load the data is not insubstantial, though it could/should be instantaneous (more on this when we do "spill to disk").
+
+| dataflow | httpd | psql | lnx_kernel |
+| ---       | ---: | ---: | ---: |
+| graspan  | 684s | 8640s | 42840s* |
+| datatoad | 8.43s | 24.33s | 55.01s |
+| datafrog | 1.30s | 4.06s | 8.03s |
+
+I had previously forgotten to subtract the loading time out for datafrog numbers, which led me to feeling more smug than I currently do about the datatoad numbers.
+We will unpack where the time goes in a future update, but the answer is "dealing with the uncertainty of variable lengthed facts and literals".
+Also datafrog hasn't had as many eyes on; perhaps there are some low hanging fruits others can see!
+
+I put a `*` next to the Graspan `lnx_kernel` number because they report the times for everything together, but clearly not together like "run at the same time" because of the colliding identifiers.
+The `lnx_kernel` input is twice the size of all the other inputs combined, so it's not directionally misleading, although absolutely factually inaccurate.
+
+We have some overhead over datafrog we need to explain, but are already comfortably non-trivial with respect to Graspan.
+The right point of comparison is probably Soufflé , which is the tool it seems like practicing professionals reach for, and which is certainly better than Graspan.
+
+#### Aliasing analysis
+
+A second analysis the Graspan folks consider, taken from [Zheng and Rugina](https://www.cs.cornell.edu/~xinz/papers/alias-popl08.pdf), is about analyzing the potential "aliasing" of values and memory locations.
+Their formulation works with expressions of two flavors: values `e` and locations in memory `*e`.
+They start from two input relations:
+```
+Assignment:     A(?val, ?loc)   // for each `?loc <- ?val`
+Dereference:    D(?val, ?loc)   // for each `?loc` as `*?val`.
+```
+From these input data, they would like to determine two classes of aliasing (quoted from Zheng and Rugina):
+* Memory (or location) aliases: two lvalue expressions are memory aliases if they might denote the same memory location;
+* Value aliases: two expressions are value aliases if they might evaluate to the same pointer value.
+
+If these are in any way confusing (they are to me) we can also just move forward with the data and the expressed analyses.
+They move forward, describing memory and value aliasing thusly, using terms we'll need to unpack.
+```
+Memory aliases:  M ::= D^T V D
+Value aliases:   V ::= F^T M^? F
+Value flows:     F ::= (A M^?)^*
+```
+Ok.
+What do these weird things mean?
+
+The right hand sides are sequences of binary relations, where the intent is that `Q ::= X Y Z`  the existence of intermediate variables that link up the the relations into a path.
+In Datalog we might write instead:
+```
+Q(?a, ?d) :- X(?a, ?b), Y(?b, ?c), Z(?c, ?d).
+```
+There are some additional weird symbols that we don't see in Datalog:
+* The `^T` means "transpose", and it turns the relation around.
+* The `^?` means "optionally", and the term can either be present or absent.
+* The `^*` means "repeatedly", and allows any number of repetitions (including zero) of the term.
+
+For example, we could write the `M` rule in Datalog as
+```
+M(?l1, ?l2) :- D(?v1, ?l1), V(?v1, ?v2), D(?v2, ?l2).
+```
+Notice how we handled the `^T` just by changing the order of the variables in first `D` atom.
+Informally, the rule says that if values `?v1` and `?v2` are potentially aliased, then the memory locations that results from dereferencing them may be "memory aliased".
+That seems like it could make sense.
+
+If we try and do the other two rules we run in to the `^?` and `^*` terms, and .. they are annoying for Datalog.
+Datalog doesn't really have a "yeah, that .. or could just skip it".
+
+The `^?` operator is relatively easy to accommodate, just by repeating the rule with and without the term.
+For value aliases, which may or may not involve a memory alias, we can write the two rules
+```
+V(?v1, ?v2) :- F(?v3, ?v1), F(?v3, ?v2).
+V(?v1, ?v2) :- F(?l1, ?v1), M(?l1, ?l2), F(?l2, ?v2).
+```
+
+The `^*` operator is a bit harder, because one "alternative" rule would have an empty body.
+Informally, this kinda means that it is unioned with the identity operator, which we may have to represent explicitly.
+We'll do that for now, but there is another fix that involves dramatically expanding out the set of rules.
+We'll discuss that if this approach ends up terrible.
+
+The value flow term is any number (including zero) of steps along a `A M^?` path, which we can write as:
+```
+F(?val, ?unk) :- A(?val, ?loc), F(?loc, ?unk).
+F(?val, ?unk) :- A(?val, ?loc), M(?loc, ?loc2), F(?loc2, ?unk).
+```
+I put `?unk` as the right hand variable of `F` because .. we don't really know what it is yet.
+The rules say that you get whatever `?unk` you found from the existing `?unk`, but where does it all start from?
+
+Informally, you start from the identity operator on the combination of all values and locations.
+We'll need values because `F`'s first argument results from `A`'s first argument, a value.
+We'll need locations because `F`'s first argument joins with locations.
+We don't have permission to do anything less, so let's put all values and locations we have ever heard about into `F`.
+```
+F(?v, ?v), F(?l, ?l) :- A(?v, ?l).
+F(?v, ?v), F(?l, ?l) :- D(?v, ?l).
+```
+These last rules are the unlock that both complete the definition of `F` and start the iteration.
+Let's do that now.
+
+While all of this was running, I went and read the Zheng and Rugina paper.
+It's maybe a good moment to point out that while the Graspan paper took the analysis from Zheng and Rugina, the whole point of their paper was to avoid doing the sort of bottom-up analysis we are doing.
+The Zheng and Rugina paper is literally "Demand-Driven Alias Analysis for C", where "demand-driven" means it tries to prove certain specific target facts, rather than all facts.
+We'll come back to that in a bit.
+
+```
+> F(?v, ?v), F(?l, ?l) :- a(?v, ?l).
+686.574892166s
+
+> F(?v, ?v), F(?l, ?l) :- d(?v, ?l).
+736.344523208s
+
+> .list
+        -a:     362799
+        -d:     1147612
+        .temp-0-1-in:   361947256
+        .temp-0-1-mid:  172922754
+        .temp-2-1-in:   92806768
+        .temp-2-1-mid:  173310916
+        .temp-3-0-in:   362799
+        .temp-4-0-in:   362799
+        .temp-4-1-in:   92806768
+        .temp-4-1-mid:  173310916
+        .temp-5-0-in:   362799
+        .temp-6-0-in:   1147612
+        F:      2669647
+        M:      92806768
+        V:      361947256
+        a:      362799
+        d:      1147612
+145.333µs
+
+> 
+```
+
+Oh boy that took a while.
+My the process is also sitting at 50.13GB, on my laptop, so .. that spilling to disk thing seems to already be happening.
+Let's look a bit closer and see if we can't dial in the numbers a bit more by writing the query more carefully.
+Then we'll discuss the whole "demand-driven" thing.
+
+Let's start by looking at these temporary relations.
+Why do they each exist?
+* The `.temp-0-1-in` term is `V` "backwards" in the production of `M`.
+* The `.temp-2-1-in` term is `M` "backwards" in the production of `V`.
+* The `.temp-3-0-in` term is `a` "backwards" in the production of `F`.
+* The `.temp-4-0-in` term is `a` "backwards" in the production of `F`.
+* The `.temp-4-1-in` term is `M` "backwards" in the production of `F`.
+* The `.temp-5-0-in` term is `a` "backwards" in the production of `F`.
+* The `.temp-6-0-in` term is `d` "backwards" in the production of `F`.
+
+The two big relations here are `V` and `M`, which are each "backwards" in *all* of their uses.
+The `a` and `d` relations are pretty small, but we can replace their uses with `-a` and `-d`, which are the Graspan names for the transposes (loaded as part of the input data).
+Let's instead produce and use `-V` and `-M`, following the Graspan nomenclature, flipping the order of their columns and making our rules now:
+```
+-M(?l2, ?l1) :- d(?v1, ?l1), -V(?v2, ?v1), d(?v2, ?l2) .
+
+-V(?v2, ?v1) :- F(?v3, ?v1), F(?v3, ?v2).
+-V(?v2, ?v1) :- F(?l1, ?v1), -M(?l2, ?l1), F(?l2, ?v2).
+
+F(?val, ?unk) :- -a(?loc, ?val), F(?loc, ?unk).
+F(?val, ?unk) :- -a(?loc, ?val), -M(?loc2, ?loc), F(?loc2, ?unk).
+F(?v, ?v), F(?l, ?l) :- -a(?l, ?v).
+F(?v, ?v), F(?l, ?l) :- -d(?l, ?v).
+```
+
+As we key in the final two rules, the system kicks into action again
+```
+> F(?v, ?v), F(?l, ?l) :- -a(?l, ?v).
+418.523364167s
+
+> F(?v, ?v), F(?l, ?l) :- -d(?l, ?v).
+397.395456458s
+
+> .list
+        -M:     92806768
+        -V:     361947256
+        -a:     362799
+        -d:     1147612
+        .temp-0-1-mid:  172922754
+        .temp-2-1-mid:  173310916
+        .temp-4-1-mid:  173310916
+        F:      2669647
+        a:      362799
+        d:      1147612
+531.042µs
+
+> 
+```
+We've removed all of the `-in` temporary relations, and the process is now at 31.96GB.
+The numbers of tuples in the `-M`, `-V`, and `F` relations match their counterparts in the previous execution, so we've almost certainly produced the same thing.
+It might even be correct, but let's not get too unrealistic.
+We do still have the temporary intermediate results for the three-way joins, but we'll have to wait to learn about streaming joins before we can remove them.
+
+Our total ends up at 815.92s, or 13.6 minutes, which compares favorably with Graspan's 8.3 hours.
+Still not sure if we are computing the right thing, so let's only be lightly pleased with ourselves.
+But pleased nonetheless.
+
+---
+
+Let's do a next unlock, and read the Zheng and Rugina more carefully.
+When they get to explaining their solution to the problem, relatively abstract up until this point, we learn a very important detail
+
+> We now present the demand-driven algorithm for answering memory may-alias queries. 
+> Given two lvalue expressions e1 and e2, the algorithm determines whether M (e1, e2) holds.
+
+They only need to produce `M` as an output!
+And really they only need to be able to *probe* `M`, which is what that "demand-driven" term means, but let's talk about `M` first.
+If you only need to produce `M`, you *don't* need to produce `V`, which is great news because `V` is enormous.
+But don't we need `V` to produce `M`? No, not really.
+
+The `V` relation contains *all* value aliasing, but `M` is only interested in value aliasing for addresses: values that appear as the first column in `d`.
+Why the hell are we computing all of `V` then?
+Let's inline the definition of `V` into `M` (make sure to choose fresh variable names; I sure didn't the first time!).
+```
+-M(?l2, ?l1) :- d(?v1, ?l1), F(?v3, ?v1), F(?v3, ?v2), d(?v2, ?l2) .
+-M(?l2, ?l1) :- d(?v1, ?l1), F(?l3, ?v1), -M(?l4, ?l3), F(?l4, ?v2), d(?v2, ?l2) .
+F(?val, ?unk) :- -a(?loc, ?val), F(?loc, ?unk).
+F(?val, ?unk) :- -a(?loc, ?val), -M(?loc2, ?loc), F(?loc2, ?unk).
+F(?v, ?v), F(?l, ?l) :- -a(?l, ?v).
+F(?v, ?v), F(?l, ?l) :- -d(?l, ?v).
+```
+Keyed in, this results in
+```
+> F(?v, ?v), F(?l, ?l) :- -a(?l, ?v).
+234.626393458s
+
+> F(?v, ?v), F(?l, ?l) :- -d(?l, ?v).
+98.101901291s
+
+> .list
+        -M:     92806768
+        -a:     362799
+        -d:     1147612
+        .temp-0-1-mid:  17768284
+        .temp-0-2-in:   2669647
+        .temp-0-2-mid:  1859886
+        .temp-1-1-mid:  172280896
+        .temp-1-2-mid:  73474947
+        .temp-1-3-in:   2669647
+        .temp-1-3-mid:  1859886
+        .temp-3-1-mid:  173310916
+        F:      2669647
+        a:      362799
+        d:      1147612
+86.75µs
+
+> 
+```
+The `-M` and `F` counts have stayed the same, so probably still the right answer.
+The `-V` count is gone, which was the whole point.
+The process is now sitting at 18.96GB, so that was clearly a bit of a savings.
+
+We do have some new join plan temporaries now.
+Notice in particular that the sizes of `.temp-0-2-mid` and `.temp-1-3-mid` are identical.
+They both correspond to the join of the two atoms at the end of the first two rules `F(?v3, ?v2), d(?v2, ?l2)`.
+
+Also, if you turn your head upside down and inside out, you can see that these are the same as the *first* two atoms in each of these joins.
+Why don't we just give them a name and use that.
+We'll call it `Fd` to evoke the sequencing of the two.
+```
+Fd(?v3, ?l2) :- F(?v3, ?v2), d(?v2, ?l2).
+```
+Rewritten, the `-M` productions are now a fair bit shorter.
+```
+-M(?l2, ?l1) :- Fd(?v3, ?l1), Fd(?v3, ?l2) .
+-M(?l2, ?l1) :- Fd(?l3, ?l1), -M(?l4, ?l3), Fd(?l4, ?l2) .
+F(?val, ?unk) :- -a(?loc, ?val), F(?loc, ?unk).
+F(?val, ?unk) :- -a(?loc, ?val), -M(?loc2, ?loc), F(?loc2, ?unk).
+F(?v, ?v), F(?l, ?l) :- -a(?l, ?v).
+F(?v, ?v), F(?l, ?l) :- -d(?l, ?v).
+```
+Again, keying in the final two rules kick things off
+```
+> F(?v, ?v), F(?l, ?l) :- -a(?l, ?v).
+163.471007292s
+
+> F(?v, ?v), F(?l, ?l) :- -d(?l, ?v).
+61.675481125s
+
+> .list
+        -M:     92806768
+        -a:     362799
+        -d:     1147612
+        .temp-0-0-in:   2669647
+        .temp-2-1-mid:  73474947
+        .temp-4-1-mid:  173310916
+        F:      2669647
+        Fd:     1859886
+        a:      362799
+        d:      1147612
+103.333µs
+
+> 
+```
+Again, a pretty nice improvement.
+
+One last thing to do for now.
+The only thing we do with `F` is put a `d` on the end.
+Also `Fd` is a bit smaller than `F`, so it seems like we didn't need everything we produced.
+We can just compute `Fd` directly, starting from `d` and pre-pending any number (including zero) of `(a M^?)`.
+This also solves the problem we have with the identity relation: `Fd` always has a `d` in it.
+```
+-M(?l2, ?l1) :- Fd(?v3, ?l1), Fd(?v3, ?l2) .
+-M(?l2, ?l1) :- Fd(?l3, ?l1), -M(?l4, ?l3), Fd(?l4, ?l2) .
+Fd(?val, ?unk) :- -a(?loc, ?val), Fd(?loc, ?unk).
+Fd(?val, ?unk) :- -a(?loc, ?val), -M(?loc2, ?loc), Fd(?loc2, ?unk).
+Fd(?val, ?loc) :- -d(?loc, ?val).
+```
+Now we only have to key in that last rule, and get
+```
+> Fd(?val, ?loc) :- -d(?loc, ?val).
+162.082759041s
+
+> .list
+        -M:     92806768
+        -a:     362799
+        -d:     1147612
+        .temp-1-1-mid:  73474947
+        .temp-3-1-mid:  73474947
+        Fd:     1859886
+        a:      362799
+        d:      1147612
+34.333µs
+
+> 
+```
+We're seeing exactly the same thing, which is that the intermediate result `-M Fd` is computed twice, and is pretty chonky.
+Let's fix that.
+For reasons that are fundamentally unfair to me, we'll want `MFd` without a `-` in front of it.
+```
+MFd(?l1, ?l2) :- -M(?l3, ?l1), Fd(?l3,?l2).
+-M(?l2, ?l1) :- Fd(?v3, ?l1), Fd(?v3, ?l2) .
+-M(?l2, ?l1) :- Fd(?l3, ?l1), MFd(?l3, ?l2).
+Fd(?val, ?unk) :- -a(?loc, ?val), Fd(?loc, ?unk).
+Fd(?val, ?unk) :- -a(?loc, ?val), MFd(?loc, ?unk).
+Fd(?val, ?loc) :- -d(?loc, ?val).
+```
+As usual, the last rule kicks off the work
+```
+> Fd(?val, ?loc) :- -d(?loc, ?val).
+119.34187225s
+
+> .list
+        -M:     92806768
+        -a:     362799
+        -d:     1147612
+        Fd:     1859886
+        MFd:    73474947
+        a:      362799
+        d:      1147612
+31.666µs
+
+> 
+```
+And we're sitting at 5.32GB.
+That's about a 10x improvement in memory from our first attempt at the plan, and nearly a 10x improvement in running time as well.
+I have no idea if we've computed anything of value, but I'm pretty confident that we've computed the *original thing*, only a fair bit faster.
+In fact, I think we've largely gone backwards through time, performing the technique that Zheng and Rugina departed from: explicit points-to sets that we intersect.
+
+---
+
+This was a not-unpleasant afternoon for me!
+
+We did a bit of stress testing the tool, and managed to explore query optimization without needing to rewire the tool at all (except for a few bug fixes).a
+We saw a series of program transformations that were *mostly* mechanical, and you could totally imagine a query optimizer doing these for you.
+An order of magnitude improvement from naively stated rules is an amazing testament to the potential of query optimizers.
+
+We also learned that you can get any bushy-tree join plan you like by naming and forming the indexed intermediate results, like we did with `Fd`.
+A lot of "declarative" languages have the frustrating defect that you can't always get the plan you want, but that doesn't seem to be the case here.
+We also saw the corresponding downside, that if you name a thing (e.g. `V`) that you don't actually need we'll still produce it for you, potentially at great cost.
+
+All in all, I'm pleased with this experiment so far.
+Up next, I'd like to grab more examples of program analysis in Datalog and see how they work out.
+Maybe collect a bit more experience with the space of bespoke optimizations before trying to automate any of them.
+
+## Spilling facts to disk
+
+## Scaling rules horizontally
+
+## Streaming facts through rules
+
+## Specializing to compiled code
+
+## Specializing to custom logic
