Mention demand-driven

--- a/posts/2025-06-03.md
+++ b/posts/2025-06-03.md
@@ -1540,6 +1540,15 @@ All in all, I'm pleased with this experiment so far.
 Up next, I'd like to grab more examples of program analysis in Datalog and see how they work out.
 Maybe collect a bit more experience with the space of bespoke optimizations before trying to automate any of them.
 
+---
+
+**Update:** I forgot to talk about "demand-driven" queries.
+We'll get there in time, but the answer is to a first approximation "magic sets", a query transformation that embeds target literals into the query.
+Think for example of starting `Vd` not from *all* `d`, just the ones you are interested in.
+That would be wrong, it turns out, but there is a general way to transform queries to only explore facts that are "demanded", hence "demand-driven".
+It turns out that magic sets are not the optimal answer, [several](http://logic.stanford.edu/logicprogramming/readings/tekle.pdf) [papers](http://logicprogramming.stanford.edu/readings/ullman.pdf) explain how they could be more efficient.
+I'll be reading them looking for the *simplest* way to do things, but in the future.
+
 ## Spilling facts to disk
 
 ## Scaling rules horizontally
