--- a/posts/2025-06-03.md
+++ b/posts/2025-06-03.md
@@ -9,7 +9,7 @@ You are going to get a bunch of thoughtful, considerate takes on the workshop, s
 As great as the time was, it struggled with a standard academic problem: smart people working on challenging problems that don't always directly connect to the challenges at hand.
 Outputs without outcomes, as they say in Product-speak.
 
-After a few days of Datalog (and other logic programming languages) talks, the one that stood out was the last talk by [Denis Bueno]() on [ctdal](https://github.com/sandialabs/ctadl).
+After a few days of Datalog (and other logic programming languages) talks, the one that stood out was the last talk by [Denis Bueno](https://github.com/dbueno) on [ctdal](https://github.com/sandialabs/ctadl).
 It's program analysis in Datalog!
 But .. boy was it a struggle, to hear it.
 Many tools didn't work; [Soufflé](http://souffle-lang.github.io) did, but you have to hold it right.
@@ -1551,10 +1551,12 @@ I'll be reading them looking for the *simplest* way to do things, but in the fut
 
 ## Spilling facts to disk
 
-## Scaling rules horizontally
+## Scaling rule evaluation out
 
 ## Streaming facts through rules
 
 ## Specializing to compiled code
 
-## Specializing to custom logic
+## Specializing to custom representations
+
+## Searching for relevant facts
