e-graph bug; oopsie

--- a/posts/2024-10-19.md
+++ b/posts/2024-10-19.md
@@ -410,6 +410,33 @@ As we only ever merge e-classes, and always merge at least one e-class, the loop
 That's the whole thing.
 E-graphs accomplished!
 
+---
+
+**Update 21-06-2025**: The above logic has a bug!
+The e-node refreshing needs to be more careful, and only re-insert itself if it is not already present with another class.
+Without that test, the updates leave behind a mess of invalid state.
+The correct-er logic seems to be (starting from where the comment starts):
+```rust
+    // Introduce evidence of the refreshed e-node.
+    // The e-node may already exist, associated with another class;
+    // In that case, enqueue a merge but do not touch anything else.
+    if self.nodes.get(&e_node).map(|i| *i == id) == Some(false) {
+        self.pending.push((*self.nodes.get(&e_node).unwrap(), id));
+    }
+    else {
+        self.members.entry(id).or_default().insert(e_node.clone());
+        for arg in e_node.args.iter() {
+            self.parents.entry(*arg).or_default().insert(e_node.clone());
+        }
+        self.nodes.insert(e_node, id);
+    }
+```
+
+Sorry about the mess!
+
+---
+
+
 ### Searching E-Graphs
 
 As interesting as it is to manually introduce equivalences like `(a x 2) / 2 == a x (2 / 2)`, the e-graph community has concluded that humans should not be involved in effecting these rules.
