e-graph bug; oopsie

--- a/posts/2024-10-19.md
+++ b/posts/2024-10-19.md
@@ -436,6 +436,17 @@ Sorry about the mess!
 
 ---
 
+**Update 21-06-2025**: When you prepare a pending merge, make sure to update the class id to merge with!
+```rust
+    if self.nodes.get(&e_node).map(|i| *i == id) == Some(false) {
+        let mut other_id = *self.nodes.get(&e_node).unwrap();
+        if let Some(newer) = new_nodes.get(&other_id) { other_id = *newer; }
+        self.pending.push((other_id, id));
+    }
+```
+
+---
+
 
 ### Searching E-Graphs
 
